--- a/WebContent/formNovaEmpresa.html
+++ b/WebContent/formNovaEmpresa.html
@@ -9,7 +9,10 @@
 	<form action="/gerenciador/novaEmpresa" method="post">
 	
 		Nome: <input type="text" name="nome">
+		Data abertura: <input type="text" name="data" >
+		
 			  <input type="submit" value="Cadastrar">
+			  
 	
 	</form>
 
